# serializer version: 1
# name: test_generate_recipe_with_mutex_version
  list([
    'ros-noetic-catkin',
    'ros-noetic-ros-package <=2.0.0',
    'ros-noetic-ros-package-msgs <=2.0.0',
    'ros_package2 <2.0.0a0',
    'qt-main >=5.15.0,<5.16.0',
    'libgl-devel',
    'libopengl-devel',
    'xorg-libx11',
    'xorg-libxext',
    'tinyxml2 ==10.0.0',
    'python',
    'numpy',
    'pip',
    'pkg-config',
    'ros-distro-mutex 0.5.* noetic',
  ])
# ---
# name: test_generate_recipe_with_versions
  list([
    'ros-noetic-ros-package <=2.0.0',
    'ros-noetic-ros-package-msgs <=2.0.0',
    'ros_package2 <2.0.0a0',
    'qt-main >=5.15.0,<5.16.0',
    'tinyxml2 ==10.0.0',
  ])
# ---
